<resources>
    <string name="app_name">Weather Owl</string>
    <string name="welcome">Welcome back, User</string>
    <string name="loading">Loading…</string>
    <string name="app_prefs_title">Preferences</string>
    <string name="api_key">08032fde5fc7affc6aa0333526887cd9</string>
    <string name="text_last_updated_text">Last Updated: %1$s</string>
    <string name="temp_celsius">%1$s°C</string>
    <string name="temp_fahrenheit">%1$s°F</string>
    <string name="date_format">%1$s, %2$s %3$s</string>
    <string name="api_provider">OpenWeatherMap</string>
    <string name="api_city_id_url">http://api.openweathermap.org/data/2.5/%1$s?id=%2$s&amp;appid=%3$s&amp;units=%4$s</string>
    <string name="api_city_search_url">http://api.openweathermap.org/data/2.5/%1$s?q=%2$s&amp;appid=%3$s&amp;units=%4$s</string>
    <string name="weather_condition_bg_desc">Background image representing the current weather condition</string>
    <string name="icon_curr_weather_condition_desc">Icon of the current weather condition</string>
    <string name="splash_screen_desc">Background image to show when app is loading</string>
    <string name="add_city_weather_button_desc">Button to click when the user wishes to add a city to obtain the weather data of</string>
    <string name="refresh_data_button_desc">Button to click when the user wishes to refresh the weather forecasts</string>
    <string name="change_preferences_button_desc">Button to click when the user wishes to change app settings</string>

    <string name="app_theme_preference_title">Theme</string>
    <string name="app_theme_preference_key">AppTheme</string>

    <string name="app_display_in_notifs_preference_title">Weather notification</string>
    <string name="app_display_in_notifs_preference_key">DisplayInNotifs</string>
    <string name="app_display_in_notifs_preference_summary">Display weather forecast in notifications</string>

    <string name="app_autolocate_preference_title">Automatically locate city</string>
    <string name="app_autolocate_preference_key">Autolocate</string>
    <string name="app_autolocate_preference_summary">Display local weather data using location</string>

    <string name="app_temp_units_preference_title">Temperature Unit</string>
    <string name="app_temp_units_preference_key">TempUnit</string>

    <string name="app_about_preference_title">About</string>
    <string name="app_about_preference_key">About</string>

    <string name="app_manage_cities_preference_title">Manage Cities</string>
    <string name="app_manage_cities_preference_key">Cities</string>

    <string name="app_prefs_about_activity">ca.uoit.group.weather.AboutActivity</string>
    <string name="app_prefs_manage_cities_activity">ca.uoit.group.weather.ManageCitiesActivity</string>

    <string name="city_search_api_url">https://maps.googleapis.com/maps/api/place/autocomplete/json?input=%1$s&amp;types=(cities)&amp;key=%2$s&amp;sessiontoken=%3$s</string>
    <string name="places_api_key">AIzaSyAGhqjrMqkS7dz9BWwYveXwULKLYCR_0M8</string>
    <string name="title_activity_searching">SearchingActivity</string>
    <string name="app_search_cities_title">Search Cities</string>

    <string name="return_button_text">Return</string>
    <string name="graph_daily_button_text">Daily</string>
    <string name="graph_three_days_button_text">3 Days</string>
    <string name="graph_five_days_button_text">5 Days</string>
    <string name="graph_show_all_button_text">Show All Lines</string>
    <string name="graph_show_temp_button_text">Show Only Temp</string>

    <string name="city1">Toronto</string>
    <string name="city2">Moscow</string>
    <string name="city3">Vancouver</string>
    <string name="city4">Shanghai</string>
    <string name="city5">London</string>
    <string name="city6">Cape Town</string>
    <string name="city7">Los Angeles</string>
    <string name="city8">Miami</string>

    <string name="about_app_text">Weather Owl\n\nMade by: Gavin Gosling, Sinthooran Ravinathan, Alex Zheng</string>
    <string name="about_app_credits_text">Weather data and API provided by %1$s</string>

    <string name="weather_notif_channel">Weather Notifications Channel</string>
    <string name="weather_notif_channel_id">WeatherNotificationChannel</string>
    <string name="weather_notif_channel_desc">Channel for displaying notifications of the current weather</string>

    <string name="search_button_text">Search</string>
    <string name="country_label">Country:</string>
    <string name="city_label">City:</string>
</resources>
