<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wowlbacks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <Button
        android:id="@+id/toronto"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/city1"
        android:onClick="toronto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/moscow"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/city2"
        android:onClick="moscow"
        app:layout_constraintStart_toEndOf="@+id/toronto"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vancouver"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:onClick="vancouver"
        android:text="@string/city3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toronto" />

    <Button
        android:id="@+id/shanghai"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/city4"
        android:onClick="shanghai"
        app:layout_constraintStart_toEndOf="@+id/vancouver"
        app:layout_constraintTop_toBottomOf="@+id/moscow" />

    <Button
        android:id="@+id/london"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/city5"
        android:onClick="london"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vancouver" />

    <Button
        android:id="@+id/cape_town"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/city6"
        android:onClick="cape_town"
        app:layout_constraintStart_toEndOf="@+id/london"
        app:layout_constraintTop_toBottomOf="@+id/shanghai" />

    <Button
        android:id="@+id/los_angeles"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_margin="36dp"
        android:text="@string/city7"
        android:onClick="los_angeles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/london" />

    <Button
        android:id="@+id/miami"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_margin="36dp"
        android:onClick="miami"
        android:text="@string/city8"
        app:layout_constraintStart_toEndOf="@+id/los_angeles"
        app:layout_constraintTop_toBottomOf="@+id/cape_town" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:onClick="search"
        android:text="@string/search_button_text"
        app:layout_constraintEnd_toStartOf="@+id/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/los_angeles" />

    <EditText
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/country_label"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/city_label"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/los_angeles" />

</android.support.constraint.ConstraintLayout>